<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.mats.AdminGestMatsAddActivity">

    <Button
        android:id="@+id/id_addMatsConfButton"
        android:layout_width="251dp"
        android:layout_height="70dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="80dp"
        android:hint="@string/confirm_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_addMatsFormAula" />

    <EditText
        android:id="@+id/id_addMatsFormTipo"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:hint="@string/add_mats_tipo_placeholder"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_addMatsTipo" />

    <EditText
        android:id="@+id/id_addMatsFormAula"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:hint="@string/add_mats_aula_placeholder"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_addMatsAula" />

    <TextView
        android:id="@+id/id_addMatsTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="112dp"
        android:hint="@string/add_mats_tipo_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColorHint="#D0D0D0"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id_addMatsAula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="109dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="109dp"
        android:hint="@string/add_mats_aula_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColorHint="#D0D0D0"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_addMatsFormTipo" />

    <TextView
        android:id="@+id/id_addMatsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:hint="@string/add_mats_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColorHint="#D0D0D0"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/id_addMatsVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#EE7100"
        android:hint="@string/return_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ua_logo_img13"
        android:layout_width="144dp"
        android:layout_height="95dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="-14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ua_logo_color" />
</androidx.constraintlayout.widget.ConstraintLayout>