<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.AdminLoginActivity">


    <Button
        android:id="@+id/send_button"
        android:layout_width="251dp"
        android:layout_height="70dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:hint="@string/login_access_button"
        app:layout_constraintBottom_toTopOf="@+id/cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="72dp"
        android:hint="@string/admin_panel_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColorHint="#D0D0D0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ua_logo_img"
        android:layout_width="224dp"
        android:layout_height="178dp"
        android:layout_marginStart="93dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ua_logo_color" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="#EE7100"
        android:hint="@string/return_button"
        app:layout_constraintBottom_toTopOf="@+id/ua_logo_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/formulario_tiu"
        android:layout_width="279dp"
        android:layout_height="48dp"
        android:layout_marginStart="66dp"
        android:layout_marginEnd="66dp"
        android:ems="10"
        android:hint="@string/login_password_placeholder"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/send_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="317dp"
        android:layout_height="103dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="47dp"
        android:hint="@string/admin_panel_display_message"
        android:justificationMode="inter_word"
        android:textAlignment="center"
        android:textColorHint="#D0D0D0"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeMessage" />

    <EditText
        android:id="@+id/formulario_tiu2"
        android:layout_width="279dp"
        android:layout_height="48dp"
        android:layout_marginStart="66dp"
        android:layout_marginEnd="66dp"
        android:ems="10"
        android:hint="@string/login_email_placeholder"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/formulario_tiu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>